--- a/loginview.ui
+++ b/loginview.ui
@@ -1,123 +1,325 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <ui version="4.0">
+
  <class>LoginView</class>
+
  <widget class="QWidget" name="LoginView">
+
   <property name="geometry">
+
    <rect>
+
     <x>0</x>
+
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+
+    <width>1000</width>
+
+    <height>700</height>
+
    </rect>
+
   </property>
-  <property name="windowTitle">
-   <string>Form</string>
-  </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
+
+  <layout class="QVBoxLayout" name="verticalLayout">
+
+   <property name="spacing">
+
+    <number>20</number>
+
+   </property>
+
    <item>
-    <spacer name="horizontalSpacer">
+
+    <spacer name="verticalSpacer_top">
+
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+
+      <enum>Qt::Orientation::Vertical</enum>
+
      </property>
+
      <property name="sizeHint" stdset="0">
+
       <size>
-       <width>40</width>
-       <height>20</height>
+
+       <width>20</width>
+
+       <height>40</height>
+
       </size>
+
      </property>
+
     </spacer>
+
    </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Login:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLineEdit" name="usernameField"/>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Hasło:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLineEdit" name="passwordField">
-         <property name="echoMode">
-          <enum>QLineEdit::EchoMode::Password</enum>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QPushButton" name="loginButton">
-       <property name="text">
-        <string>Zaloguj</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="errorLabel">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
+
+   <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+    <widget class="QLabel" name="lblLogo">
+
+     <property name="minimumSize">
+
+      <size>
+
+       <width>0</width>
+
+       <height>150</height>
+
+      </size>
+
+     </property>
+
+     <property name="maximumSize">
+
+      <size>
+
+       <width>500</width>
+
+       <height>200</height>
+
+      </size>
+
+     </property>
+
+     <property name="text">
+
+      <string/>
+
+     </property>
+
+     <property name="scaledContents">
+
+      <bool>false</bool>
+
+     </property>
+
+     <property name="alignment">
+
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+
+     </property>
+
+    </widget>
+
    </item>
+
+   <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+    <widget class="QLabel" name="lblTitle">
+
+     <property name="font">
+
+      <font>
+
+       <pointsize>24</pointsize>
+
+       <bold>true</bold>
+
+      </font>
+
+     </property>
+
+     <property name="styleSheet">
+
+      <string notr="true">color: #4CAF50; margin-bottom: 20px;</string>
+
+     </property>
+
+     <property name="text">
+
+      <string>MacroMind Gym Tracker</string>
+
+     </property>
+
+    </widget>
+
+   </item>
+
+   <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+    <widget class="QGroupBox" name="loginGroup">
+
+     <property name="minimumSize">
+
+      <size>
+
+       <width>350</width>
+
+       <height>0</height>
+
+      </size>
+
+     </property>
+
+     <property name="maximumSize">
+
+      <size>
+
+       <width>400</width>
+
+       <height>16777215</height>
+
+      </size>
+
+     </property>
+
+     <property name="title">
+
+      <string>Logowanie</string>
+
+     </property>
+
+     <layout class="QVBoxLayout" name="vboxLogin">
+
+      <property name="spacing">
+
+       <number>15</number>
+
+      </property>
+
+      <item>
+
+       <widget class="QLineEdit" name="loginInput">
+
+        <property name="minimumSize">
+
+         <size>
+
+          <width>0</width>
+
+          <height>40</height>
+
+         </size>
+
+        </property>
+
+        <property name="placeholderText">
+
+         <string>Login</string>
+
+        </property>
+
+       </widget>
+
+      </item>
+
+      <item>
+
+       <widget class="QLineEdit" name="passwordInput">
+
+        <property name="minimumSize">
+
+         <size>
+
+          <width>0</width>
+
+          <height>40</height>
+
+         </size>
+
+        </property>
+
+        <property name="echoMode">
+
+         <enum>QLineEdit::EchoMode::Password</enum>
+
+        </property>
+
+        <property name="placeholderText">
+
+         <string>Hasło</string>
+
+        </property>
+
+       </widget>
+
+      </item>
+
+      <item>
+
+       <widget class="QPushButton" name="loginButton">
+
+        <property name="minimumSize">
+
+         <size>
+
+          <width>0</width>
+
+          <height>45</height>
+
+         </size>
+
+        </property>
+
+        <property name="font">
+
+         <font>
+
+          <pointsize>11</pointsize>
+
+          <bold>true</bold>
+
+         </font>
+
+        </property>
+
+        <property name="cursor">
+
+         <cursorShape>PointingHandCursor</cursorShape>
+
+        </property>
+
+        <property name="text">
+
+         <string>ZALOGUJ SIĘ</string>
+
+        </property>
+
+       </widget>
+
+      </item>
+
+     </layout>
+
+    </widget>
+
+   </item>
+
    <item>
-    <spacer name="horizontalSpacer_2">
+
+    <spacer name="verticalSpacer_bottom">
+
      <property name="orientation">
-      <enum>Qt::Orientation::Horizontal</enum>
+
+      <enum>Qt::Orientation::Vertical</enum>
+
      </property>
+
      <property name="sizeHint" stdset="0">
+
       <size>
-       <width>40</width>
-       <height>20</height>
+
+       <width>20</width>
+
+       <height>40</height>
+
       </size>
+
      </property>
+
     </spacer>
+
    </item>
+
   </layout>
+
  </widget>
+
  <resources/>
+
  <connections/>
+
 </ui>
