--- a/profileview.ui
+++ b/profileview.ui
@@ -1,73 +1,749 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <ui version="4.0">
+
  <class>ProfileView</class>
+
  <widget class="QWidget" name="ProfileView">
+
   <property name="geometry">
+
    <rect>
+
     <x>0</x>
+
     <y>0</y>
-    <width>366</width>
-    <height>298</height>
+
+    <width>916</width>
+
+    <height>750</height>
+
    </rect>
+
   </property>
-  <property name="windowTitle">
-   <string>Form</string>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+
+  <layout class="QHBoxLayout" name="mainLayout">
+
+   <property name="spacing">
+
+    <number>30</number>
+
+   </property>
+
+   <property name="leftMargin">
+
+    <number>20</number>
+
+   </property>
+
+   <property name="topMargin">
+
+    <number>20</number>
+
+   </property>
+
+   <property name="rightMargin">
+
+    <number>20</number>
+
+   </property>
+
+   <property name="bottomMargin">
+
+    <number>20</number>
+
+   </property>
+
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+
+    <layout class="QVBoxLayout" name="leftPanel">
+
+     <property name="spacing">
+
+      <number>15</number>
+
+     </property>
+
      <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Profil</string>
+
+      <widget class="QLabel" name="labelTitle">
+
+       <property name="font">
+
+        <font>
+
+         <pointsize>18</pointsize>
+
+         <bold>true</bold>
+
+        </font>
+
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="LoginLabel">
+
        <property name="text">
-        <string>login:</string>
+
+        <string>Twój Profil</string>
+
        </property>
+
+       <property name="alignment">
+
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+
+       </property>
+
       </widget>
+
      </item>
-     <item>
-      <widget class="QLabel" name="birthDateLabel">
+
+     <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+      <widget class="QLabel" name="lblAvatar">
+
+       <property name="minimumSize">
+
+        <size>
+
+         <width>200</width>
+
+         <height>200</height>
+
+        </size>
+
+       </property>
+
+       <property name="maximumSize">
+
+        <size>
+
+         <width>200</width>
+
+         <height>200</height>
+
+        </size>
+
+       </property>
+
+       <property name="styleSheet">
+
+        <string notr="true">border: 3px solid #ccc; background-color: #f9f9f9; border-radius: 10px;</string>
+
+       </property>
+
        <property name="text">
+
+        <string>Brak zdjęcia</string>
+
+       </property>
+
+       <property name="scaledContents">
+
+        <bool>true</bool>
+
+       </property>
+
+       <property name="alignment">
+
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+
+       </property>
+
+      </widget>
+
+     </item>
+
+     <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+      <widget class="QPushButton" name="btnChangePhoto">
+
+       <property name="maximumSize">
+
+        <size>
+
+         <width>250</width>
+
+         <height>16777215</height>
+
+        </size>
+
+       </property>
+
+       <property name="cursor">
+
+        <cursorShape>PointingHandCursor</cursorShape>
+
+       </property>
+
+       <property name="text">
+
+        <string>Zmień zdjęcie</string>
+
+       </property>
+
+      </widget>
+
+     </item>
+
+     <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+      <widget class="QGroupBox" name="groupStatic">
+
+       <property name="maximumSize">
+
+        <size>
+
+         <width>450</width>
+
+         <height>16777215</height>
+
+        </size>
+
+       </property>
+
+       <property name="title">
+
+        <string>Dane użytkownika</string>
+
+       </property>
+
+       <layout class="QVBoxLayout" name="vboxStatic">
+
+        <item>
+
+         <widget class="QLabel" name="LoginLabel">
+
+          <property name="font">
+
+           <font>
+
+            <pointsize>11</pointsize>
+
+           </font>
+
+          </property>
+
+          <property name="text">
+
+           <string>Nazwa: ...</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item>
+
+         <widget class="QLabel" name="birthDateLabel">
+
+          <property name="font">
+
+           <font>
+
+            <pointsize>11</pointsize>
+
+           </font>
+
+          </property>
+
+          <property name="text">
+
+           <string>Data ur.: ...</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+       </layout>
+
+      </widget>
+
+     </item>
+
+     <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+      <widget class="QGroupBox" name="groupAdd">
+
+       <property name="maximumSize">
+
+        <size>
+
+         <width>450</width>
+
+         <height>16777215</height>
+
+        </size>
+
+       </property>
+
+       <property name="title">
+
+        <string>Aktualizuj Wymiary</string>
+
+       </property>
+
+       <layout class="QGridLayout" name="gridLayoutAdd">
+
+        <item row="0" column="0">
+
+         <widget class="QLabel" name="l1">
+
+          <property name="text">
+
+           <string>Waga (kg):</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="0" column="1">
+
+         <widget class="QDoubleSpinBox" name="spinWeight">
+
+          <property name="maximum">
+
+           <double>300.000000000000000</double>
+
+          </property>
+
+          <property name="singleStep">
+
+           <double>0.500000000000000</double>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="1" column="0">
+
+         <widget class="QLabel" name="l2">
+
+          <property name="text">
+
+           <string>Wzrost (cm):</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="1" column="1">
+
+         <widget class="QSpinBox" name="spinHeight">
+
+          <property name="maximum">
+
+           <number>250</number>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="2" column="0" colspan="2">
+
+         <widget class="QPushButton" name="btnAddMeasurement">
+
+          <property name="minimumSize">
+
+           <size>
+
+            <width>0</width>
+
+            <height>40</height>
+
+           </size>
+
+          </property>
+
+          <property name="cursor">
+
+           <cursorShape>PointingHandCursor</cursorShape>
+
+          </property>
+
+          <property name="text">
+
+           <string>ZAPISZ POMIAR</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+       </layout>
+
+      </widget>
+
+     </item>
+
+     <item>
+
+      <spacer name="verticalSpacer">
+
+       <property name="orientation">
+
+        <enum>Qt::Orientation::Vertical</enum>
+
+       </property>
+
+       <property name="sizeHint" stdset="0">
+
+        <size>
+
+         <width>20</width>
+
+         <height>40</height>
+
+        </size>
+
+       </property>
+
+      </spacer>
+
+     </item>
+
+     <item alignment="Qt::AlignmentFlag::AlignHCenter">
+
+      <widget class="QLabel" name="logo_label">
+
+       <property name="minimumSize">
+
+        <size>
+
+         <width>0</width>
+
+         <height>100</height>
+
+        </size>
+
+       </property>
+
+       <property name="maximumSize">
+
+        <size>
+
+         <width>450</width>
+
+         <height>150</height>
+
+        </size>
+
+       </property>
+
+       <property name="text">
+
         <string/>
+
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="heightCmLabel">
-       <property name="text">
-        <string>TextLabel</string>
+
+       <property name="scaledContents">
+
+        <bool>false</bool>
+
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="weightKgLabel">
-       <property name="text">
-        <string>TextLabel</string>
+
+       <property name="alignment">
+
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+
        </property>
+
       </widget>
+
      </item>
+
     </layout>
+
    </item>
+
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Orientation::Vertical</enum>
+
+    <layout class="QVBoxLayout" name="rightPanel">
+
+     <property name="spacing">
+
+      <number>15</number>
+
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+
+     <item>
+
+      <widget class="QLabel" name="lblBMIResult">
+
+       <property name="minimumSize">
+
+        <size>
+
+         <width>0</width>
+
+         <height>80</height>
+
+        </size>
+
+       </property>
+
+       <property name="font">
+
+        <font>
+
+         <pointsize>14</pointsize>
+
+         <bold>true</bold>
+
+        </font>
+
+       </property>
+
+       <property name="text">
+
+        <string>BMI: -</string>
+
+       </property>
+
+       <property name="alignment">
+
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+
+       </property>
+
+      </widget>
+
+     </item>
+
+     <item>
+
+      <widget class="QGroupBox" name="groupBoxCalories">
+
+       <property name="title">
+
+        <string>Kalkulator Zapotrzebowania Kalorycznego (Mifflin-St Jeor)</string>
+
+       </property>
+
+       <layout class="QGridLayout" name="gridCalories">
+
+        <property name="horizontalSpacing">
+
+         <number>15</number>
+
+        </property>
+
+        <property name="verticalSpacing">
+
+         <number>10</number>
+
+        </property>
+
+        <item row="0" column="0">
+
+         <widget class="QLabel" name="lblPAL">
+
+          <property name="text">
+
+           <string>Aktywność (PAL):</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="0" column="1">
+
+         <widget class="QComboBox" name="comboPAL"/>
+
+        </item>
+
+        <item row="1" column="0">
+
+         <widget class="QLabel" name="lblGoal">
+
+          <property name="text">
+
+           <string>Twój cel:</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="1" column="1">
+
+         <widget class="QComboBox" name="comboGoal"/>
+
+        </item>
+
+        <item row="2" column="0" colspan="2">
+
+         <widget class="QPushButton" name="btnCalculateCalories">
+
+          <property name="minimumSize">
+
+           <size>
+
+            <width>0</width>
+
+            <height>35</height>
+
+           </size>
+
+          </property>
+
+          <property name="text">
+
+           <string>OBLICZ KALORIE</string>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+        <item row="3" column="0" colspan="2">
+
+         <widget class="QLabel" name="lblCaloriesResult">
+
+          <property name="styleSheet">
+
+           <string notr="true">font-weight: bold; margin-top: 5px;</string>
+
+          </property>
+
+          <property name="text">
+
+           <string>Wybierz parametry i kliknij Oblicz.</string>
+
+          </property>
+
+          <property name="alignment">
+
+           <set>Qt::AlignmentFlag::AlignCenter</set>
+
+          </property>
+
+         </widget>
+
+        </item>
+
+       </layout>
+
+      </widget>
+
+     </item>
+
+     <item>
+
+      <widget class="QLabel" name="labelHistory">
+
+       <property name="font">
+
+        <font>
+
+         <pointsize>10</pointsize>
+
+         <bold>true</bold>
+
+        </font>
+
+       </property>
+
+       <property name="text">
+
+        <string>Historia pomiarów:</string>
+
+       </property>
+
+      </widget>
+
+     </item>
+
+     <item>
+
+      <widget class="QTableWidget" name="tableMeasurements">
+
+       <property name="alternatingRowColors">
+
+        <bool>true</bool>
+
+       </property>
+
+       <property name="selectionBehavior">
+
+        <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+
+       </property>
+
+       <property name="columnCount">
+
+        <number>4</number>
+
+       </property>
+
+       <column>
+
+        <property name="text">
+
+         <string>Data</string>
+
+        </property>
+
+       </column>
+
+       <column>
+
+        <property name="text">
+
+         <string>Waga (kg)</string>
+
+        </property>
+
+       </column>
+
+       <column>
+
+        <property name="text">
+
+         <string>Wzrost (cm)</string>
+
+        </property>
+
+       </column>
+
+       <column>
+
+        <property name="text">
+
+         <string>BMI</string>
+
+        </property>
+
+       </column>
+
+      </widget>
+
+     </item>
+
+    </layout>
+
    </item>
+
   </layout>
+
  </widget>
+
  <resources/>
+
  <connections/>
+
 </ui>
